add a short description

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <h1>Hello everyone</h1>
 <p>Here will be apps to calculate expenses</p>
+<span>application for budget calculation</span>
 </body>
 
 </html>
